--- a/details.html
+++ b/details.html
@@ -43,6 +43,7 @@
         <div class="container body-content">
             
             <h1> Details Page with more content... </h1>
+            <h2>More detailed added on the feature-branch-two branch</h2>
 
             <hr />
             <footer>
